# model-autotrans

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.cfg
src/autotrans/: __init__.py  autotrans.py  engine.py  integration.py  lookup_table.py  shift_logic.py  transmission.py  vehicle.py
src/autotrans/modeling/: integrator.py  lookup_table.py
tests/autotrans/: conftest.py  test_data.h5  test_engine.py  test_lookup_table.py  test_shift_logic.py  test_transmission.py  test_vehicle.py
tests/autotrans/modeling/: test_integrator.py  test_lookup_table.py
