[metadata]
name = autotrans
version = 0.1.0
author = Quinn Thibeault
author_email = qthibeau@asu.edu
description = Python implementation of autotrans Simulink model developed by MathWorks

[options]
package_dir =
    =src
packages = autotrans
python_requires >= 3.6
install_requires =
    transitions >=0.8.10, <0.9
    numpy >=1.22.2,<1.23.0
    scipy >=1.7.3,<1.8.0

[options.packages.find]
where = src
